--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    padding: 60px;
+}
+
+input {
+    box-sizing: border-box;
+    font-size: 1.2rem;
+    width: 100%;
+    color: gray;
+    padding: 4px 0 4px 10px;
+    outline-color: rgb(224, 224, 224);
+}
+
+.flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-wr{
+    flex-wrap: wrap;
+}
+
+.card{
+    align-content: center;
+    border: 1px solid grey;
+    border-radius: 6px;
+    overflow: hidden;
+    margin: 5px 5px;
+    
+}
+
+.card img{
+    width: auto;
+}
+
+
+.card p{
+    text-align: center;
 }
